--- a/Apps.GoogleDrive/Assets/Styles/Branding.html
+++ b/Apps.GoogleDrive/Assets/Styles/Branding.html
@@ -94,7 +94,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 12
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
@@ -134,7 +134,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 22
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
@@ -175,7 +175,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 32
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
@@ -216,7 +216,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 42
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
@@ -257,7 +257,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 52
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
@@ -295,7 +295,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 62
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
@@ -344,7 +344,7 @@
                     src="https://developers.google.com/static/identity/images/g-logo.png"
                     alt="icon"
                 />
-                Sign in with Test Plugin
+                Sign in with Test Plugin - 72
             </button>
             <p class="small-text">
                 Blackbird's use and transfer of information received from Google
